[gd_scene load_steps=33 format=2]

[ext_resource path="res://scenes/base_phase/BossTable.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/phase2/Map2.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/base_phase/TextureProgress.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/slots/Slot.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/items/task/small_task.png" type="Texture" id=5]
[ext_resource path="res://scenes/slots/SlotExpansor.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/items/profile_sheets/bento_light_sheet.png" type="Texture" id=7]
[ext_resource path="res://assets/Drawer/Tasks/task_teste.png" type="Texture" id=8]
[ext_resource path="res://assets/items/profile_sheets/roger_light_sheet.png" type="Texture" id=9]
[ext_resource path="res://assets/items/profile_sheets/kira_light_sheet.png" type="Texture" id=10]
[ext_resource path="res://assets/items/profile_sheets/ana_light_sheet.png" type="Texture" id=11]
[ext_resource path="res://assets/buttons/icon_pause.png" type="Texture" id=12]
[ext_resource path="res://scenes/slots/HSlotCollection.tscn" type="PackedScene" id=13]
[ext_resource path="res://scripts/base_phase/BasePhase.gd" type="Script" id=14]
[ext_resource path="res://scenes/base_phase/TimeDisplayer.tscn" type="PackedScene" id=15]
[ext_resource path="res://assets/Fonts/joystix_monospace_font.ttf" type="DynamicFontData" id=16]
[ext_resource path="res://scenes/phase2/Phase2Drawer.tscn" type="PackedScene" id=17]
[ext_resource path="res://assets/items/profile_sheets/roger_big_sheet.png" type="Texture" id=18]
[ext_resource path="res://assets/items/profile_sheets/kira_big_sheet.png" type="Texture" id=19]
[ext_resource path="res://assets/items/profile_sheets/bento_big_sheet.png" type="Texture" id=20]
[ext_resource path="res://scenes/Pause.tscn" type="PackedScene" id=21]
[ext_resource path="res://assets/Feedbacks/little_star_full.png" type="Texture" id=22]
[ext_resource path="res://assets/Feedbacks/little_star_empty.png" type="Texture" id=23]
[ext_resource path="res://assets/items/profile_sheets/ana_big_sheet.png" type="Texture" id=24]
[ext_resource path="res://assets/Phase2/circle_purple.png" type="Texture" id=25]
[ext_resource path="res://assets/buttons/hover_icon_pause.png" type="Texture" id=26]
[ext_resource path="res://assets/Audio/Click.wav" type="AudioStream" id=27]
[ext_resource path="res://assets/Audio/Conclued_task.wav" type="AudioStream" id=28]
[ext_resource path="res://assets/Audio/Pause.wav" type="AudioStream" id=29]
[ext_resource path="res://assets/Phase2/tend_dark.png" type="Texture" id=30]
[ext_resource path="res://assets/Phase2/tend (1).png" type="Texture" id=31]

[sub_resource type="DynamicFont" id=1]
size = 35
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 16 )

[node name="Phase2" type="Node2D"]
script = ExtResource( 14 )
phase_key = 2
phase_progress = NodePath("PhaseProgress")
map = NodePath("Map")
slot_kira = NodePath("Slots/SlotExpansorKira")
slot_roger = NodePath("Slots/SlotExpansorRoger")
slot_ana = NodePath("Slots/SlotExpansorAna")
slot_bento = NodePath("Slots/SlotExpansorBento")
profile_kira = NodePath("Slots/SlotExpansorKira/SlotCollectionKira/ProfileSlotKira")
profile_roger = NodePath("Slots/SlotExpansorRoger/SlotCollectionRoger/ProfileSlotRoger")
profile_ana = NodePath("Slots/SlotExpansorAna/SlotCollectionAna/ProfileSlotAna")
profile_bento = NodePath("Slots/SlotExpansorBento/SlotCollectionBento/ProfileSlotBento")
star1 = NodePath("Scores/StarProgress1")
star2 = NodePath("Scores/StarProgress2")
star3 = NodePath("Scores/StarProgress3")

[node name="Table" parent="." instance=ExtResource( 1 )]
position = Vector2( 772, 0 )

[node name="Map" parent="." instance=ExtResource( 2 )]

[node name="Pause_button" type="TextureButton" parent="."]
margin_left = 15.0
margin_top = 13.0
margin_right = 75.0
margin_bottom = 73.0
rect_scale = Vector2( 1.2, 1.2 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 12 )
texture_hover = ExtResource( 26 )
expand = true

[node name="Slots" type="Node2D" parent="."]
scale = Vector2( 0.9, 0.9 )
z_index = 6

[node name="SlotExpansorKira" parent="Slots" instance=ExtResource( 6 )]
margin_left = 117.778
margin_top = 291.111
margin_right = 362.778
margin_bottom = 436.111

[node name="SlotCollectionKira" parent="Slots/SlotExpansorKira" instance=ExtResource( 13 )]
margin_left = 3.0
margin_top = 94.0
margin_right = 131.0
margin_bottom = 134.0
rect_min_size = Vector2( 128, 40 )
custom_constants/separation = 28
collection_size = Vector2( 128, 40 )

[node name="WorkSlotKira" parent="Slots/SlotExpansorKira/SlotCollectionKira" instance=ExtResource( 4 )]
margin_right = 50.0
margin_bottom = 48.0
rect_min_size = Vector2( 50, 32 )
mouse_filter = 2
slot_size = Vector2( 50, 32 )
images_size = Vector2( 48, 48 )

[node name="ProfileSlotKira" parent="Slots/SlotExpansorKira/SlotCollectionKira" instance=ExtResource( 4 )]
margin_left = 78.0
margin_right = 128.0
margin_bottom = 48.0
rect_min_size = Vector2( 50, 32 )
mouse_filter = 2
uid = "kira_profile"
qtd = 1
slot_type = 1
slot_size = Vector2( 50, 32 )
images_size = Vector2( 48, 48 )
table_image = ExtResource( 10 )
drawer_image = ExtResource( 5 )
boss_table_image = ExtResource( 19 )

[node name="SlotExpansorRoger" parent="Slots" instance=ExtResource( 6 )]
margin_left = 474.444
margin_top = 284.444
margin_right = 719.444
margin_bottom = 429.444

[node name="SlotCollectionRoger" parent="Slots/SlotExpansorRoger" instance=ExtResource( 13 )]
margin_left = 107.0
margin_top = 98.0
margin_right = 235.0
margin_bottom = 138.0
rect_min_size = Vector2( 128, 40 )
custom_constants/separation = 28
collection_size = Vector2( 128, 40 )

[node name="WorkSlotRoger" parent="Slots/SlotExpansorRoger/SlotCollectionRoger" instance=ExtResource( 4 )]
margin_right = 50.0
margin_bottom = 48.0
rect_min_size = Vector2( 50, 32 )
mouse_filter = 2
slot_size = Vector2( 50, 32 )
images_size = Vector2( 48, 48 )

[node name="ProfileSlotRoger" parent="Slots/SlotExpansorRoger/SlotCollectionRoger" instance=ExtResource( 4 )]
margin_left = 78.0
margin_right = 128.0
margin_bottom = 48.0
rect_min_size = Vector2( 50, 32 )
mouse_filter = 2
uid = "roger_profile"
qtd = 1
slot_type = 1
slot_size = Vector2( 50, 32 )
images_size = Vector2( 48, 48 )
table_image = ExtResource( 9 )
drawer_image = ExtResource( 8 )
boss_table_image = ExtResource( 18 )

[node name="SlotExpansorAna" parent="Slots" instance=ExtResource( 6 )]
margin_left = 111.111
margin_top = 503.333
margin_right = 356.111
margin_bottom = 648.333

[node name="SlotCollectionAna" parent="Slots/SlotExpansorAna" instance=ExtResource( 13 )]
margin_left = 5.0
margin_top = 91.0
margin_right = 133.0
margin_bottom = 131.0
rect_min_size = Vector2( 128, 40 )
custom_constants/separation = 28
collection_size = Vector2( 128, 40 )

[node name="WorkSlotAna" parent="Slots/SlotExpansorAna/SlotCollectionAna" instance=ExtResource( 4 )]
margin_right = 50.0
margin_bottom = 48.0
rect_min_size = Vector2( 50, 32 )
mouse_filter = 2
slot_size = Vector2( 50, 32 )
images_size = Vector2( 48, 48 )

[node name="ProfileSlotAna" parent="Slots/SlotExpansorAna/SlotCollectionAna" instance=ExtResource( 4 )]
margin_left = 78.0
margin_right = 128.0
margin_bottom = 48.0
rect_min_size = Vector2( 50, 32 )
mouse_filter = 2
uid = "ana_profile"
qtd = 1
slot_type = 1
slot_size = Vector2( 50, 32 )
images_size = Vector2( 48, 48 )
table_image = ExtResource( 11 )
drawer_image = ExtResource( 8 )
boss_table_image = ExtResource( 24 )

[node name="SlotExpansorBento" parent="Slots" instance=ExtResource( 6 )]
margin_left = 472.222
margin_top = 508.889
margin_right = 717.222
margin_bottom = 653.889

[node name="SlotCollectionBento" parent="Slots/SlotExpansorBento" instance=ExtResource( 13 )]
margin_left = 99.0
margin_top = 73.0
margin_right = 227.0
margin_bottom = 113.0
rect_min_size = Vector2( 128, 40 )
custom_constants/separation = 28
collection_size = Vector2( 128, 40 )

[node name="WorkSlotBento" parent="Slots/SlotExpansorBento/SlotCollectionBento" instance=ExtResource( 4 )]
margin_right = 50.0
margin_bottom = 48.0
rect_min_size = Vector2( 50, 32 )
mouse_filter = 2
slot_size = Vector2( 50, 32 )
images_size = Vector2( 48, 48 )

[node name="ProfileSlotBento" parent="Slots/SlotExpansorBento/SlotCollectionBento" instance=ExtResource( 4 )]
margin_left = 78.0
margin_right = 128.0
margin_bottom = 48.0
rect_min_size = Vector2( 50, 32 )
mouse_filter = 2
uid = "bento_profile"
qtd = 1
slot_type = 1
slot_size = Vector2( 50, 32 )
images_size = Vector2( 48, 48 )
table_image = ExtResource( 7 )
drawer_image = ExtResource( 8 )
boss_table_image = ExtResource( 20 )

[node name="TimeDisplayer" parent="." instance=ExtResource( 15 )]
margin_left = 1016.0
margin_top = 4.0
margin_right = 1169.0
margin_bottom = 101.0
seconds = 45
minutes = 3

[node name="Circulo" type="Sprite" parent="."]
position = Vector2( 68, 653 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 25 )

[node name="MainDrawer" parent="." instance=ExtResource( 17 )]
position = Vector2( 772, 623 )

[node name="PhaseProgress" parent="." instance=ExtResource( 3 )]
margin_left = 33.0
margin_top = 607.0
margin_right = 173.0
margin_bottom = 797.0
rect_scale = Vector2( 0.5, 0.5 )
max_value = 144.0
texture_under = ExtResource( 30 )
texture_progress = ExtResource( 31 )
qtd_task = 12

[node name="Pause" parent="." instance=ExtResource( 21 )]
visible = false

[node name="Scores" type="Node2D" parent="."]

[node name="ScorePhase" type="Label" parent="Scores"]
margin_left = 291.0
margin_top = 18.0
margin_right = 487.0
margin_bottom = 82.0
custom_fonts/font = SubResource( 1 )
text = "Score:"
align = 1
valign = 1

[node name="StarProgress1" type="TextureProgress" parent="Scores"]
margin_left = 477.0
margin_top = 28.0
margin_right = 525.0
margin_bottom = 74.0
max_value = 56.0
texture_under = ExtResource( 23 )
texture_progress = ExtResource( 22 )

[node name="StarProgress2" type="TextureProgress" parent="Scores"]
margin_left = 534.0
margin_top = 28.0
margin_right = 582.0
margin_bottom = 74.0
max_value = 17.0
texture_under = ExtResource( 23 )
texture_progress = ExtResource( 22 )

[node name="StarProgress3" type="TextureProgress" parent="Scores"]
margin_left = 587.0
margin_top = 28.0
margin_right = 635.0
margin_bottom = 74.0
max_value = 12.0
texture_under = ExtResource( 23 )
texture_progress = ExtResource( 22 )

[node name="Click_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 27 )

[node name="Conclued_task" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 28 )

[node name="Paused_audio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 29 )

[connection signal="ana_fineshed_task" from="Map" to="." method="_on_Map_ana_fineshed_task"]
[connection signal="bento_fineshed_task" from="Map" to="." method="_on_Map_bento_fineshed_task"]
[connection signal="kira_fineshed_task" from="Map" to="." method="_on_Map_kira_fineshed_task"]
[connection signal="roger_fineshed_task" from="Map" to="." method="_on_Map_roger_fineshed_task"]
[connection signal="pressed" from="Pause_button" to="." method="_on_Pause_button_pressed"]
[connection signal="get_item" from="Slots/SlotExpansorKira/SlotCollectionKira/WorkSlotKira" to="." method="_on_WorkSlotKira_get_item"]
[connection signal="get_item" from="Slots/SlotExpansorRoger/SlotCollectionRoger/WorkSlotRoger" to="." method="_on_WorkSlotRoger_get_item"]
[connection signal="get_item" from="Slots/SlotExpansorAna/SlotCollectionAna/WorkSlotAna" to="." method="_on_WorkSlotAna_get_item"]
[connection signal="get_item" from="Slots/SlotExpansorBento/SlotCollectionBento/WorkSlotBento" to="." method="_on_WorkSlotBento_get_item"]
[connection signal="timer_is_over" from="TimeDisplayer" to="." method="_on_TimeDisplayer_timer_is_over"]
[connection signal="completed_change" from="PhaseProgress" to="." method="_on_PhaseProgress_completed_change"]
